K/kubeauth.io-9g753/kubeauth.io.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeauth-system
  labels:
    app: kubeauth
---
apiVersion: v1
kind: Service
metadata:
  name: kubeauth-controller
  namespace: kubeauth-system
  labels:
    kubeauth-component: kubeauth-controller
spec:
  ports:
    - port: 8443
      targetPort: 8443
  selector:
    kubeauth-component: kubeauth-controller
---
apiVersion: v1
kind: Service
metadata:
  name: kubeauth-metrics
  namespace: kubeauth-system
  labels:
    kubeauth-component: kubeauth-metrics
spec:
  ports:
    - name: https
      port: 9090
      targetPort: 9090
      nodePort: 31381
  selector:
    kubeauth-component: kubeauth-metrics
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: kubeauth-monitoring
  namespace: kubeauth-system
  labels:
    kubeauth-component: kubeauth-monitoring
spec:
  clusterIP: None
  ports:
    - port: 40000
      targetPort: 40000
  selector:
    kubeauth-component: kubeauth-monitoring
---
apiVersion: v1
kind: Service
metadata:
  name: kubeauth-monitoring-lb
  namespace: kubeauth-system
  labels:
    kubeauth-component: kubeauth-monitoring-lb
spec:
  ports:
    - name: https
      port: 40001
      targetPort: 40000
      nodePort: 31382
  selector:
    kubeauth-component: kubeauth-monitoring
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: kubeauth-server
  namespace: kubeauth-system
  labels:
    kubeauth-component: kubeauth-server
spec:
  ports:
    - name: https
      port: 9443
      targetPort: 9443
      nodePort: 31380
  selector:
    kubeauth-component: kubeauth-server
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeauth-controller
  namespace: kubeauth-system
spec:
  replicas: 1
  selector:
    matchLabels:
      kubeauth-component: kubeauth-controller
  template:
    metadata:
      labels:
        kubeauth-component: kubeauth-controller
    spec:
      containers:
        - name: kubeauth-controller
          image: yotronpublic/kubeauth-mutatingadmission:1.2.1
          imagePullPolicy: Always
          ports:
            - name: clr-port
              containerPort: 8443
              hostPort: 8443
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
            failureThreshold: 1
            periodSeconds: 5
            terminationGracePeriodSeconds: 60
          volumeMounts:
            - name: kubeauth-controller-tls-secret
              mountPath: /run/secrets/tls
              readOnly: true
      volumes:
        - name: kubeauth-controller-tls-secret
          secret:
            secretName: kubeauth-controller-tls-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeauth-metrics
  namespace: kubeauth-system
spec:
  replicas: 1
  selector:
    matchLabels:
      kubeauth-component: kubeauth-metrics
  template:
    metadata:
      labels:
        kubeauth-component: kubeauth-metrics
    spec:
      containers:
        - name: kubeauth-monitoring
          image: yotronpublic/kubeauth-metrics:1.2.1
          imagePullPolicy: Always
          ports:
            - name: monitoring-port
              containerPort: 40000
              hostPort: 40000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
              scheme: HTTPS
            failureThreshold: 1
            periodSeconds: 5
            terminationGracePeriodSeconds: 60
          volumeMounts:
            - name: kubeauth-server-tls-secret
              mountPath: /etc/kubeauth/tls
              readOnly: true
      volumes:
        - name: kubeauth-server-tls-secret
          secret:
            secretName: kubeauth-controller-tls-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeauth-monitoring
  namespace: kubeauth-system
spec:
  replicas: 1
  selector:
    matchLabels:
      kubeauth-component: kubeauth-monitoring
  template:
    metadata:
      labels:
        kubeauth-component: kubeauth-monitoring
    spec:
      containers:
        - name: kubeauth-monitoring
          image: yotronpublic/kubeauth-monitoring:1.2.1
          imagePullPolicy: Always
          ports:
            - name: monitoring-port
              containerPort: 40000
              hostPort: 40000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 40000
              scheme: HTTP
            failureThreshold: 1
            periodSeconds: 5
            terminationGracePeriodSeconds: 60
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeauth-server
  namespace: kubeauth-system
spec:
  replicas: 1
  selector:
    matchLabels:
      kubeauth-component: kubeauth-server
  template:
    metadata:
      labels:
        kubeauth-component: kubeauth-server
    spec:
      containers:
        - name: kubeauth-server
          image: yotronpublic/kubeauth-server:1.2.1
          imagePullPolicy: Always
          ports:
            - name: svr-port
              containerPort: 9443
              hostPort: 9443
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9443
              scheme: HTTPS
            failureThreshold: 1
            periodSeconds: 5
            terminationGracePeriodSeconds: 60
          volumeMounts:
            - name: kubeauth-server-tls-secret
              mountPath: /etc/kubeauth/tls
              readOnly: true
            - name: kubeauth-server-configs
              mountPath: /etc/kubeauth/config
              readOnly: true
      volumes:
        - name: kubeauth-server-tls-secret
          secret:
            secretName: kubeauth-controller-tls-secret
        - name: kubeauth-server-configs
          configMap:
            name: proxy-configurations
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kubeauth-webhook-admission-conf
  namespace: kubeauth-system
webhooks:
  - name: kubeauth-controller.kubeauth-system.svc
    failurePolicy: Fail
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kubeauth-controller
        namespace: kubeauth-system
        path: /mutate
        port: 8443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZhakNDQkZLZ0F3SUJBZ0lVS1hraC8yeXZXTXlOYWVpcGlXSVBCTUJmYVgwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2diSXhDekFKQmdOVkJBWVRBa1JGTVRnd05nWURWUVFRREM5R2NtVnBhR1Z5Y2kxMmIyMHRVM1JsYVc0ZwpVM1J5WVhOelpTQTBMQ0JFTFRZMU9ERXlJRUpoWkNCVGIyUmxiakVQTUEwR0ExVUVDZ3dHV1U5VVVrOU9NVGt3Ck53WURWUVFERERCWlQxUlNUMDRnVW05dmRDQkRaWEowYVdacFkyRjBhVzl1SUVGMWRHaHZjbWwwZVNCbWIzSWcKUTJ4bFlYSkxPRk14SFRBYkJna3Foa2lHOXcwQkNRRVdEbWx1Wm05QWVXOTBjbTl1TG1SbE1DQVhEVEl4TVRJdwpPVEV3TkRRME1W [...]
    rules:
      - operations:
          - CREATE
          - DELETE
        apiGroups:
          - ""
        apiVersions:
          - v1
        resources:
          - pods
        scope: Namespaced
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kubeauth-system
